k8s/notification-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-worker
  namespace: ticketflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-worker
  template:
    metadata:
      labels:
        app: notification-worker
    spec:
      containers:
        - name: notification-worker
          image: acrticketflowdeveliya.azurecr.io/notification-worker:v1
