k8s/payment-mock.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-mock
  namespace: ticketflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-mock
  template:
    metadata:
      labels:
        app: payment-mock
    spec:
      containers:
        - name: payment-mock
          image: acrticketflowdeveliya.azurecr.io/payment-mock:v1
          ports:
            - containerPort: 4002
---
apiVersion: v1
kind: Service
metadata:
  name: payment-mock
  namespace: ticketflow
spec:
  selector:
    app: payment-mock
  ports:
    - port: 4002
      targetPort: 4002
