k8s/seat-inventory.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seat-inventory
  namespace: ticketflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seat-inventory
  template:
    metadata:
      labels:
        app: seat-inventory
    spec:
      containers:
        - name: seat-inventory
          image: acrticketflowdeveliya.azurecr.io/seat-inventory:v1
          ports:
            - containerPort: 4001
---
apiVersion: v1
kind: Service
metadata:
  name: seat-inventory
  namespace: ticketflow
spec:
  selector:
    app: seat-inventory
  ports:
    - port: 4001
      targetPort: 4001
