k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ticketflow-ingress
  namespace: ticketflow
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - http:
        paths:
          - path: /api/seats(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: seat-inventory
                port:
                  number: 4001
          - path: /api/bookings(/|*)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: booking-api
                port:
                  number: 4000
